tests/baselines/reference/parserErrorRecovery_ParameterList1.errors.txt
parserErrorRecovery_ParameterList1.ts(1,14): error TS1005: ',' expected.


==== parserErrorRecovery_ParameterList1.ts (1 errors) ====
    function f(a {
                 ~
!!! error TS1005: ',' expected.
    }